WIP : Tracking position. to be tested outside

--- a/appcache.json
+++ b/appcache.json
@@ -10,7 +10,13 @@
 				".htaccess", 
 				"*.php", 
 				"*.map"],
-	"include":["/"],
+	"include":["/",
+				"http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css",
+				"https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.js",
+				"https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular-route.js",
+				"http://fonts.googleapis.com/css?family=Roboto:400,700",
+				"http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js",
+				"http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"],
 	"network":["/api"],
 	"fallback":[{"url":"/","fb":"fallback.html"},
 				{"url":"/api","fb":"api.json"}],
