--- a/appcache.json
+++ b/appcache.json
@@ -18,7 +18,6 @@
 				"http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js",
 				"http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"],
 	"network":["/api"],
-	"fallback":[{"url":"/","fb":"fallback.html"},
-				{"url":"/api","fb":"api.json"}],
+	"fallback":[],
 	"manifest":"manifest.appcache"
 }
