--- a/.htaccess
+++ b/.htaccess
@@ -675,4 +675,6 @@ FileETag None
     RewriteCond $1 ^(api) 
     RewriteRule ^(.*)$ ./tiers2/index.php?$1 [L]
 
+    RewriteCond $1 !^(api|tiers2|index\.php|index\.html|js|dist|bootstrap|css|angular|template|uploads|robots\.txt|app\.js|manifest\.appcache|favicon\.ico)
+    RewriteRule ^(.*)$ ./index.html [L]
 </IfModule>
