--- a/.htaccess
+++ b/.htaccess
@@ -669,12 +669,15 @@ FileETag None
 # Addition to remove index.php from url
 <IfModule mod_rewrite.c>
 # allow social media crawlers to work by redirecting them to a server-rendered static version on the page
- RewriteCond %{HTTP_USER_AGENT} (facebookexternalhit/[0-9]|Twitterbot|Pinterest|Google)
-    RewriteRule ^report/(.*)$ ./tiers2/index.php?report/$1 [L]
+ RewriteCond "%{HTTP_USER_AGENT}" "(facebookexternalhit/[0-9]|Twitterbot|Pinterest|Google)"
+    RewriteRule "^report/(.*)$" "./tiers2/index.php?report/$1" [L]
 
-    RewriteCond $1 ^(api) 
-    RewriteRule ^(.*)$ ./tiers2/index.php?$1 [L]
+ RewriteCond "%{HTTP_USER_AGENT}" "(facebookexternalhit/[0-9]|Twitterbot|Pinterest|Google)"
+    RewriteRule "^$" "./tiers2/index.php?index"  [L]
 
-    RewriteCond $1 !^(api|tiers2|index\.php|index\.html|js|dist|bootstrap|css|angular|template|uploads|robots\.txt|app\.js|manifest\.appcache|favicon\.ico)
-    RewriteRule ^(.*)$ ./index.html [L]
+    RewriteCond "$1" "^(api)" 
+    RewriteRule "^(.*)$" "./tiers2/index.php?$1" [L]
+
+    RewriteCond "$1" "!^(api|tiers2|index\.php|index\.html|js|dist|bootstrap|css|angular|template|uploads|robots\.txt|app\.js|manifest\.appcache|favicon\.ico)"
+    RewriteRule "^(.*)$" "./index.html" [L]
 </IfModule>
