--- a/appcache.json
+++ b/appcache.json
@@ -9,7 +9,8 @@
 				".htaccess", 
 				"*.php", 
 				"*.map",
-                ".DS_Store"],
+                ".DS_Store",
+                "images/"],
 	"include":["/",
 				"http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css",
 				"https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.js",
